# ROSZMPWalker

./: CMakeLists.txt  mainpage.dox  manifest.xml
launch/: qual_task_1.launch
scripts/: newfive.py
src/: CMakeLists.txt  johnnieWalker.cpp  johnnieWalker.h  publish_and_readonce.cpp  publish_and_readonce.h
src/matahari/: CMakeLists.txt  matahari.cpp
src/matahari/adaptedZMP/: AtlasKinematics_Extra.cpp  AtlasKinematics_Extra.h  CMakeLists.txt  footprint.cpp  footprint.h  zmpWalkGenerator.cpp  zmpWalkGenerator.h
src/walk/: CMakeLists.txt  johnnieWalker.cpp  johnnieWalker.h  publish_and_readonce.cpp  publish_and_readonce.h
src/walk/zmp/: zmpUtilities.cpp  zmpUtilities.h
src/walk/zmp/tests/: generateTraj.cpp
src/zmp/: CMakeLists.txt  main.cpp  zmp_walk.cpp  zmp_walk.h
src/zmpUtilities/: CMakeLists.txt  to_be_erased.cpp  zmpUtilities.cpp  zmpUtilities.h  zmpUtilities_oldFxs.cpp
src/zmpUtilities/tests/: CMakeLists.txt  generateTraj.cpp  testFootprints.cpp
src/zmpUtilities/tinyWalker/zmp/: CMakeLists.txt  footprint.cpp  swing.cpp  swing.h
